test/parser/Queries/syntax_errors/fail_K-WhereExpr-6.xq
(:***** for ******** where ****foo***** $ ** where ********* where ********** where * ne ** for *******:)
 eq (: Test: K-WhereExpr-6  eq         $           foo     eq       ne        :)
(: Written by: Frans Englich      foo          $               let : $ )
(: Date: ne  2006-10-05T18:29:37+02:00           ne             ne   where  :)
( Purpose: A for expression binding  where to one singlevalue,  with a negative where clause. : $ )
(:* where * for *********** where * ne * ne ********************* $ **foo******* eq ********:)
(for $i in 1 where true() return $i) eq  ne 1